Fixed URL bar covering content on mobile.

--- a/web/public/css/main.css
+++ b/web/public/css/main.css
@@ -3,7 +3,7 @@
     overscroll-behavior: contain; /* Prevent scrolling the entire page when reaching the top or bottom of a scrollable element. */
 }
 
-.html, body
+html, body
 {
 	height: 100%;
 	width: 100%;
@@ -14,8 +14,6 @@
 
 body
 {
-	min-height: 100vh;
-	min-width: 100vw;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
